Fixed issue of being unable to click service markers that overlapped with school markers on finder

--- a/src/css/finder.less
+++ b/src/css/finder.less
@@ -714,3 +714,9 @@ html {
 #browserModal.modal.fade.in {
   background: rgba(0,0,0,0.75);
 }
+
+.disabled-marker {
+  opacity: 0 !important;
+  pointer-events: none !important;
+  cursor: unset;
+}
